@@ -45,130 +45,130 @@ public class CampManagementApplication {
     // 초기 데이터 생성
     private static void setInitData() {
         subjectStore = List.of(
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "Java",
-                        SUBJECT_TYPE_MANDATORY
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "객체지향",
-                        SUBJECT_TYPE_MANDATORY
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "Spring",
-                        SUBJECT_TYPE_MANDATORY
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "JPA",
-                        SUBJECT_TYPE_MANDATORY
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "MySQL",
-                        SUBJECT_TYPE_MANDATORY
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "디자인 패턴",
-                        SUBJECT_TYPE_CHOICE
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "Spring Security",
-                        SUBJECT_TYPE_CHOICE
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "Redis",
-                        SUBJECT_TYPE_CHOICE
-                ),
-                new Subject(
-                        sequence(INDEX_TYPE_SUBJECT),
-                        "MongoDB",
-                        SUBJECT_TYPE_CHOICE
-                )
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "Java",
+                SUBJECT_TYPE_MANDATORY
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "객체지향",
+                SUBJECT_TYPE_MANDATORY
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "Spring",
+                SUBJECT_TYPE_MANDATORY
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "JPA",
+                SUBJECT_TYPE_MANDATORY
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "MySQL",
+                SUBJECT_TYPE_MANDATORY
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "디자인 패턴",
+                SUBJECT_TYPE_CHOICE
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "Spring Security",
+                SUBJECT_TYPE_CHOICE
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "Redis",
+                SUBJECT_TYPE_CHOICE
+            ),
+            new Subject(
+                sequence(INDEX_TYPE_SUBJECT),
+                "MongoDB",
+                SUBJECT_TYPE_CHOICE
+            )
         );
 //        studentStore = new ArrayList<>();
-//        //조회를 위해 학생리스트를 임의로 생성
-//        studentStore = new ArrayList<>(Arrays.asList(
-//            new Student(
-//                sequence(INDEX_TYPE_STUDENT),
-//                "HongGilDong",
-//                Status.valueOf("Green"),
-//                new ArrayList<>(Arrays.asList(getSubjectByName("Java"),
-//                    getSubjectByName("객체지향"),
-//                    getSubjectByName("Spring"),
-//                    getSubjectByName("MongoDB"),
-//                    getSubjectByName("Spring Security")))
-//            ),
-//            new Student(
-//                sequence(INDEX_TYPE_STUDENT),
-//                "YuHari",
-//                Status.valueOf("Red"),`
-//                new ArrayList<>(Arrays.asList(getSubjectByName("Java"),
-//                    getSubjectByName("객체지향"),
-//                    getSubjectByName("Spring"),
-//                    getSubjectByName("Redis"),
-//                    getSubjectByName("Spring Security")))
-//            ),
-//            new Student(
-//                sequence(INDEX_TYPE_STUDENT),
-//                "HongGilDong",
-//                Status.valueOf("Red"),
-//                new ArrayList<>(Arrays.asList(getSubjectByName("Java"),
-//                    getSubjectByName("MySQL"),
-//                    getSubjectByName("JPA"),
-//                    getSubjectByName("디자인 패턴"),
-//                    getSubjectByName("Spring Security")))
-//            ))
-//        );
-//        scoreStore = new ArrayList<>();
+        //조회를 위해 학생리스트를 임의로 생성
+        studentStore = new ArrayList<>(Arrays.asList(
+                new Student(
+                        sequence(INDEX_TYPE_STUDENT),
+                        "HongGilDong",
+                        Status.valueOf("Green")
+                ),
+                new Student(
+                        sequence(INDEX_TYPE_STUDENT),
+                        "YuHari",
+                        Status.valueOf("Red")
+                ),
+                new Student(
+                        sequence(INDEX_TYPE_STUDENT),
+                        "HongGilDong",
+                        Status.valueOf("Yellow")
+                ),
+                new Student(
+                        sequence(INDEX_TYPE_STUDENT),
+                        "Test",
+                        Status.valueOf("Green")
+                )
+        ));
         //조회를 위해 점수리스트를 임의로 생성
-//        scoreStore = new ArrayList<>(Arrays.asList(
-//            new Score(
-//                sequence(INDEX_TYPE_SCORE),
-//                "ST1",
-//                "SU1",
-//                new ArrayList<ScoreDatail>(Arrays.asList(
-//                    new ScoreDatail(1,78, getSubjectTypeByName("Java")),
-//                    new ScoreDatail(2,98, getSubjectTypeByName("Java")),
-//                    new ScoreDatail(3,86, getSubjectTypeByName("Java"))
-//                ))
-//            ),
-//            new Score(
-//                sequence(INDEX_TYPE_SCORE),
-//                "ST1",
-//                "SU2",
-//                new ArrayList<ScoreDatail>(Arrays.asList(
-//                    new ScoreDatail(1,96, getSubjectTypeByName("객체지향")),
-//                    new ScoreDatail(2,98, getSubjectTypeByName("객체지향")),
-//                    new ScoreDatail(3,92, getSubjectTypeByName("객체지향"))
-//                ))
-//            ),
-//            new Score(
-//                sequence(INDEX_TYPE_SCORE),
-//                "ST2",
-//                "SU1",
-//                new ArrayList<ScoreDatail>(Arrays.asList(
-//                    new ScoreDatail(1,78, getSubjectTypeByName("Java")),
-//                    new ScoreDatail(2,68, getSubjectTypeByName("Java")),
-//                    new ScoreDatail(3,86, getSubjectTypeByName("Java"))
-//                ))
-//            ),
-//            new Score(
-//                sequence(INDEX_TYPE_SCORE),
-//                "ST2",
-//                "SU2",
-//                new ArrayList<ScoreDatail>(Arrays.asList(
-//                    new ScoreDatail(1,78, getSubjectTypeByName("객체지향")),
-//                    new ScoreDatail(2,98, getSubjectTypeByName("객체지향")),
-//                    new ScoreDatail(3,86, getSubjectTypeByName("객체지향"))
-//                ))
-//            ))
-//        );
+        scoreStore = new ArrayList<>(Arrays.asList(
+            new Score(
+                sequence(INDEX_TYPE_SCORE),
+                "ST1",
+                "SU1",
+                new ArrayList<ScoreDatail>(Arrays.asList(
+                    new ScoreDatail(1,78, getSubjectTypeByName("Java")),
+                    new ScoreDatail(2,98, getSubjectTypeByName("Java")),
+                    new ScoreDatail(3,86, getSubjectTypeByName("Java"))
+                ))
+            ),
+            new Score(
+                sequence(INDEX_TYPE_SCORE),
+                "ST1",
+                "SU2",
+                new ArrayList<ScoreDatail>(Arrays.asList(
+                    new ScoreDatail(1,96, getSubjectTypeByName("객체지향")),
+                    new ScoreDatail(2,98, getSubjectTypeByName("객체지향")),
+                    new ScoreDatail(3,92, getSubjectTypeByName("객체지향"))
+                ))
+            ),
+            new Score(
+                sequence(INDEX_TYPE_SCORE),
+                "ST2",
+                "SU1",
+                new ArrayList<ScoreDatail>(Arrays.asList(
+                    new ScoreDatail(1,78, getSubjectTypeByName("Java")),
+                    new ScoreDatail(2,68, getSubjectTypeByName("Java")),
+                    new ScoreDatail(3,86, getSubjectTypeByName("Java"))
+                ))
+            ),
+            new Score(
+                sequence(INDEX_TYPE_SCORE),
+                "ST2",
+                "SU2",
+                new ArrayList<ScoreDatail>(Arrays.asList(
+                    new ScoreDatail(1,78, getSubjectTypeByName("객체지향")),
+                    new ScoreDatail(2,98, getSubjectTypeByName("객체지향")),
+                    new ScoreDatail(3,86, getSubjectTypeByName("객체지향"))
+                ))
+            ),
+                new Score(
+                        sequence(INDEX_TYPE_SCORE),
+                        "ST4",
+                        "SU2",
+                        new ArrayList<ScoreDatail>(Arrays.asList(
+                                new ScoreDatail(1,78, getSubjectTypeByName("객체지향")),
+                                new ScoreDatail(2,98, getSubjectTypeByName("객체지향")),
+                                new ScoreDatail(3,86, getSubjectTypeByName("객체지향"))
+                        ))
+                ))
+
+        );
 
     }
 
@@ -221,14 +221,16 @@ public class CampManagementApplication {
             System.out.println("수강생 관리 실행 중...");
             System.out.println("1. 수강생 등록");
             System.out.println("2. 수강생 목록 조회");
-            System.out.println("3. 메인 화면 이동");
+            System.out.println("7. 수강생 삭제");
+            System.out.println("8. 메인 화면 이동");
             System.out.print("관리 항목을 선택하세요...");
             int input = sc.nextInt();
 
             switch (input) {
                 case 1 -> createStudent(); // 수강생 등록
                 case 2 -> inquireStudent(); // 수강생 목록 조회
-                case 3 -> flag = false; // 메인 화면 이동
+                case 7 -> removeStudent(); // 수강생 목록 조회
+                case 8 -> flag = false; // 메인 화면 이동
                 default -> {
                     System.out.println("잘못된 입력입니다.\n메인 화면 이동...");
                     flag = false;
@@ -254,8 +256,7 @@ public class CampManagementApplication {
         }
 
         //필수 과목 3개 이상, 선택 과목 2개 이상 선택할때까지
-        SelectSubjectLoop:
-        // 이미 선택했다면 흐름제어를 통해 돌아오려고 만든 라벨
+        SelectSubjectLoop: // 이미 선택했다면 흐름제어를 통해 돌아오려고 만든 라벨
         while (true) {
             System.out.print("필수 과목 3개 이상, 선택 과목 2개 이상을 선택해주세요. 과목 이름으로 적어주세요.");
             String subjectName = sc.nextLine();
@@ -267,19 +268,20 @@ public class CampManagementApplication {
                     if (subjectStore.get(i).getSubjectType().equals(SUBJECT_TYPE_MANDATORY)) mandatoryNums++;
                     else choiceNums++;
 
-                    for (int j = 0; j < tempSubjectStore.size(); j++) {
-                        if (tempSubjectStore.get(j).getSubjectName().equals(subjectName)) {
+                    for(int j = 0; j < tempSubjectStore.size(); j++){
+                        if(tempSubjectStore.get(j).getSubjectName().equals(subjectName)){
                             System.out.println("이미 등록한 과목 입니다. 다시 선택해 주세요.");
                             continue SelectSubjectLoop;
                         }
                     }
 
-                    //데이터 넣어주기.
+                    //데이터 넣어주고 이놈은 그냥 중복자료 있나 확인용 임시 subject
                     Subject subject = new Subject(subjectStore.get(i).getSubjectId(),
                             subjectStore.get(i).getSubjectName(),
                             subjectStore.get(i).getSubjectType());
                     tempSubjectStore.add(subject);
-//scoreStore.add(new Score(sequence(),학생아이디, 과목 아이디))
+
+
                     bFindSubject = true;
                     System.out.print("선택 완료\n");
                     break;
@@ -296,8 +298,15 @@ public class CampManagementApplication {
             }
         }
 
-//        Student student = new Student(sequence(INDEX_TYPE_STUDENT), studentName, Status.valueOf("Green"),tempSubjectStore);
-//        studentStore.add(student);
+        Student student = new Student(sequence(INDEX_TYPE_STUDENT), studentName, Status.valueOf("Green"));
+        studentStore.add(student);
+
+        //실제 자료 넣기 -> 일단 점수 데이터는 빈 ArrayList 가 들어간다.
+        for(int i = 0; i < tempSubjectStore.size(); i++){
+            //IndexScore 를 제외하고 학생 ID 는 이미 sequence 를 이용해서 올라갔을테니 따로 안올려주고 조합해서 보내준다.
+            scoreStore.add(new Score(sequence(INDEX_TYPE_SCORE), INDEX_TYPE_STUDENT + studentIndex, subjectStore.get(i).getSubjectId()));
+        }
+
 
         System.out.println("수강생 등록 성공!\n");
     }
@@ -307,8 +316,8 @@ public class CampManagementApplication {
         System.out.println("\n수강생 목록을 조회합니다...");
 
         // studentStore 리스트에서 학생 정보 받아서 목록 출력 + 순서대로 번호 부여
-        for (int i = 0; i < studentStore.size(); i++) {
-            System.out.println((i + 1) + ". 고유번호: " + studentStore.get(i).getStudentId() + ", 이름: " + studentStore.get(i).getStudentName());
+        for(int i = 0; i < studentStore.size(); i++) {
+            System.out.println((i+1) +". 고유번호: "+ studentStore.get(i).getStudentId() + ", 이름: " +studentStore.get(i).getStudentName());
         }
         System.out.println("\n수강생 목록 조회 성공!");
     }
@@ -322,7 +331,8 @@ public class CampManagementApplication {
             System.out.println("2. 수강생의 과목별 회차 점수 수정");
             System.out.println("3. 수강생의 특정 과목 회차별 등급 조회");
             System.out.println("4. 수강생의 특정 과목 평균등급 조회");
-            System.out.println("5. 메인 화면 이동");
+            System.out.println("7. 특정 상태 수강생들의 필수 과목 평균 등급 조회");
+            System.out.println("8. 메인 화면 이동");
             System.out.print("관리 항목을 선택하세요...");
             int input = sc.nextInt();
 
@@ -331,7 +341,8 @@ public class CampManagementApplication {
                 case 2 -> updateRoundScoreBySubject(); // 수강생의 과목별 회차 점수 수정
                 case 3 -> inquireRoundGradeBySubject(); // 수강생의 특정 과목 회차별 등급 조회
                 case 4 -> inquireAverageGrade(); // 수강생의 특정 과목 평균등급 조회
-                case 5 -> flag = false; // 메인 화면 이동
+                case 7 -> inquireAverageGradeByStatus(); // 수강생의 특정 과목 평균등급 조회
+                case 8 -> flag = false; // 메인 화면 이동
                 default -> {
                     System.out.println("잘못된 입력입니다.\n메인 화면 이동...");
                     flag = false;
@@ -344,7 +355,6 @@ public class CampManagementApplication {
         System.out.print("\n관리할 수강생의 번호를 입력하시오...");
         return sc.next();
     }
-
     private static String getSubjectId() {
         System.out.print("\n관리할 과목의 번호를 입력하시오...");
         return sc.next();
@@ -360,68 +370,54 @@ public class CampManagementApplication {
     }
 
     // 수강생의 과목별 회차 점수 수정
-    private static void updateRoundScoreBySubject() {
-        String studentId = studentStore.toString(); // 관리할 수강생 고유 번호
+    private static void updateRoundScoreBySubject()  {
+        String studentId = getStudentId(); // 관리할 수강생 고유 번호
         System.out.println("점수 수정을 원하는 학생의 id를 입력하세요.");
-        String studentId2 = String.valueOf(sc.nextInt()); //id 입력
+        studentId = String.valueOf(sc.nextInt()); //id 입력
         //1. 해당학생 조회하고 없는 번호면 오류 텍스트 출력하기
         //2. 해당학생의 수정할 과목 입력하고 조회 후 없으면 오류 텍스트 출력하기
         //3. 수정할 회차 입력하고 조회 후 없으면 오류 텍스트 출력하기
         //4. 점수 수정하는 기능 구현  점수가 없으면 바로 추가해주는것도 넣기
-        while (true) { //studentStore 배열의 id 와 입력할 아이디가 같은지 대조
-            //try catch를 이용해 오류문구 띄우고 반목문을 계속하게 할 수 있다.
-            //for 대신 while을 쓸 수도 있고
-            //if else로 내가 원하는 기능이 구현될지 정확히 모르겠다.
-            if (studentId2.equals(studentId)) {
-                studentId2 = studentId; // 맞으면 진행
+        for(Student s: studentStore) { //studentStore 배열의 id 와 입력할 아이디가 같은지 대조
+            if (s.getStudentId().equals(studentId)) {
+               Student student = s; // 맞으면 진행
                 break;
-            } else {
-                System.out.println("해당 학생을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
             }
+        }
+        if(studentId == null){
+            System.out.println("해당 학생을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
+            return;
         }
 
         System.out.println("수정할 과목 이름을 입력하세요.");
-        String subjectId = sc.next(); //해당 과목 입력
+        String subjectName = sc.next(); //해당 과목 입력
 
-        for (int i = 0; i < subjectStore.toArray().length; i++) {
-            if (subjectId.equals(subjectStore.get(i))) {
-                //입력된 과목과 불러온 과목 이름 같은지 대조
-                subjectId = String.valueOf(subjectStore.get(i));
-                //맞으면 해당 과목의 값을 넣고 다음으로 넘어감
-                break;
-            } else {
-                System.out.println("해당 과목을 찾을 수 없습니다.");
+        for(Subject s : subjectStore){
+            if (s.getSubjectName().equals(subjectName)) { //적은 과목과 불러온 과목 이름 같은지 대조
+               Subject subject = s;
+               break;
             }
         }
-        System.out.println("수정할 회차를 입력해 주세요 ");//회차입력 - 범위벗어나는 숫자입력시 오류문자 내는 기능 넣기
-
-        int round;
-        while (true) {
-            round = sc.nextInt();
-            if (round > 0 && round < 11) {
-                seq = toString(round);
-                //입력된 라운드 값을 넣어주고 나중에 스코어에 값넣을때 기준값으로 설정
-                break;
-            } else {
-                System.out.println("해당 회차을 찾을 수 없습니다.");
-            }
+        if(subjectName == null){
+            System.out.println("해당 과목을 찾을 수 없습니다."); //id 값이 배열에 없으면 오류문 나타냄
+            return;
         }
-        Score score = new Score(seq, studentId,subjectId);
-        //클래스에있는거 어떤건 불러와지고 어떤건 안되는지 모르겠음
+        System.out.println("수정할 회차를 입력해 주세요 "); //회차입력 - 범위벗어나는 숫자입력시 오류문자 내는 기능 넣기
+        int round = sc.nextInt();
+
         System.out.println("새로운 점수를 입력해 주세요 "); // 점수입력 - 범위벗어나는 숫자 입력시 오류 문자 내는 기능 넣기
-
         int updatedScore = sc.nextInt();
-        if (scoreStore() != null) { //해당 점수가 빈칸이 아니면 이라는뜻
-            //점수가 저장되는곳이 어딘지 정확히 몰라서 대충 적어놓은코드
-            ScoreDetail.remove(score);// 리스트에 해당위치 값 지우고 넣는거 하면 될거같음
-            scoreList.add(updatedScore);
-        } else {
-            score.add(updatedScore, studentId2, subjectId);
-            //스코어에 넣기 어떻게 연결해야하는지 모르겠음
-        }
 
+        for(Score score : scoreStore){
+             // 조건해서 맞으면 해당 위치에 점수 넣기
+        }
+        //점수 없으면 그냥 그대로 점수 추가하기 기능 넣기
         System.out.println("시험 점수를 수정합니다...");
         System.out.println("\n점수 수정 성공!");
+        // 기능 구현 (수정할 과목 및 회차, 점수)
+
+        // 기능 구현
+
     }
 
     // 수강생의 특정 과목 회차별 등급 조회
@@ -436,56 +432,54 @@ public class CampManagementApplication {
         System.out.println("회차별 등급을 조회합니다...");
         //해당 학생아이디와 과목아이디를 가진 점수를 찾아라
         Optional<Score> selectScore = scoreStore.stream()
-                .filter((Score score) -> score.getStudentId().equals(studentId))
-                .filter((Score score) -> score.getSubjectId().equals(subjectId))
-                .findFirst();
+            .filter((Score score)->score.getStudentId().equals(studentId))
+            .filter((Score score)->score.getSubjectId().equals(subjectId))
+            .findFirst();
         //만약 있다면
-        if (selectScore.isPresent()) {
+        if(selectScore.isPresent()) {
             List<ScoreDatail> scoreList = selectScore.get().getScoreList();
-            for (ScoreDatail score : scoreList) System.out.println(score.getRound() + "회차 : " + score.getGrade());
+            for (ScoreDatail score : scoreList) System.out.println(score.getRound()+"회차 : "+score.getGrade());
             System.out.println("\n등급 조회 성공!");
-        } else {
+        }else {
             System.out.println("\n등급 조회 실패! 다시 시도해주세요.");
         }
     }
-
     //수강생 이름으로 아이디 찾기
     //이름이 같을 경우도 고려해야함
-    private static String getStudentIdByName() {
+    private static String getStudentIdByName(){
         System.out.print("\n관리할 수강생의 이름을 입력하시오...");
         String studentName = sc.next();
         String subjectId = "";
         //해당 이름을 가진 수강생 데이터 리스트
         List<Student> selectStudent = studentStore.stream()
-                .filter((Student student) -> student.getStudentName().equals(studentName))
-                .toList();
+            .filter((Student student)->student.getStudentName().equals(studentName))
+            .toList();
         //만약 동명이인 있다면
-        if (selectStudent.size() > 1) {
+        if(selectStudent.size()>1) {
             //목록을 보여줄테니
-            for (Student eachStudent : selectStudent) {
-                System.out.println("이름 : " + eachStudent.getStudentName() + "\t 아이디:" + eachStudent.getStudentId());
+            for(Student eachStudent: selectStudent) {
+                System.out.println("이름 : "+eachStudent.getStudentName()+"\t 아이디:"+eachStudent.getStudentId());
             }
             //이중에 누구인지 골라라
             System.out.println("조회할 수강생의 아이디 입력");
             return sc.next();
         }
         //이름이 같은 사람이 없다면 해당 수강생의 아이디 출력
-//        else if(selectStudent.size()==1) return selectStudent.getFirst().getStudentId();
+        else if(selectStudent.size()==1) return selectStudent.get(0).getStudentId();
         //해당 이름을 가진 수강생이 없다면 NoName 출력
         else return "NoName";
     }
-
     //과목 이름으로 아이디 찾기
-    private static String getSubjectIdByName() {
+    private static String getSubjectIdByName(){
         System.out.print("\n관리할 과목의 이름을 입력하시오...");
         String subjectName = sc.next();
         //입력값에 해당하는 subject 데이터 찾기
         Optional<Subject> selectSubject = subjectStore.stream()
-                .filter((Subject subject) -> subject.getSubjectName().equals(subjectName))
-                .findFirst();
+            .filter((Subject subject)->subject.getSubjectName().equals(subjectName))
+            .findFirst();
         //있으면 해당 과목의 아이디 출력
-        if (selectSubject.isPresent()) return selectSubject.get().getSubjectId();
-            //없으면 NoName 출력
+        if(selectSubject.isPresent()) return selectSubject.get().getSubjectId();
+        //없으면 NoName 출력
         else return "NoName";
     }
 
@@ -499,48 +493,130 @@ public class CampManagementApplication {
         System.out.println("평균 등급을 조회합니다...");
         //해당 학생과 과목이 일치하는 점수 얻기
         Optional<Score> selectScore = scoreStore.stream()
-                .filter((Score score) -> score.getStudentId().equals(studentId))
-                .filter((Score score) -> score.getSubjectId().equals(subjectId))
-                .findFirst();
-        if (selectScore.isPresent()) {
+            .filter((Score score)->score.getStudentId().equals(studentId))
+            .filter((Score score)->score.getSubjectId().equals(subjectId))
+            .findFirst();
+        if(selectScore.isPresent()) {
             Score score = selectScore.get();
             //해당하는 과목의 subjectType 구하기("필수 or 선택)
             String subjectType = subjectStore.stream()
-                    .filter((Subject subject) -> subject.getSubjectId().equals(subjectId))
-                    .findFirst().get().getSubjectType();
+                .filter((Subject subject) -> subject.getSubjectId().equals(subjectId))
+                .findFirst().get().getSubjectType();
             //점수의 평균값 얻기
             List<ScoreDatail> scoreList = score.getScoreList();
             int sum = 0;
-            for (ScoreDatail scoreDetail : scoreList) {
-                sum += scoreDetail.getScore();
+            for(ScoreDatail scoreDetail:scoreList) {
+                sum+=scoreDetail.getScore();
             }
-            double avgScore = sum / scoreList.size();
+            double avgScore= sum/scoreList.size();
             // 평균 점수를 등급으로 바꿔줌
-            System.out.println("이 과목의 평균등급은 " + ScoreDatail.changeGrade(subjectType, avgScore) + "입니다.");
+            System.out.println("이 과목의 평균등급은 "+ ScoreDatail.changeGrade(subjectType,avgScore)+"입니다.");
 
             System.out.println("\n등급 조회 성공!");
-        } else {
+        }else {
             System.out.println("\n등급 조회 실패! 다시 시도해주세요.");
         }
     }
 
     //초기값 생성에서 수강생의 과목 리스트를 쉽게 만들기 위한 함수 -> 나중에 지울 예정이라 신경안써도 됨
-    public static Subject getSubjectByName(String subjectName) {
-        Optional<Subject> selectSubject = subjectStore.stream()
-                .filter((Subject subejct) -> subejct.getSubjectName().equals(subjectName))
-                .findFirst();
-        if (selectSubject.isPresent()) {
-            Subject subject = selectSubject.get();
-            return subject;
-        } else return new Subject("SU0", "NoSubject", "MANDATORY");
+    public static  Subject getSubjectByName(String subjectName){
+      Optional<Subject> selectSubject = subjectStore.stream()
+            .filter((Subject subejct)->subejct.getSubjectName().equals(subjectName))
+            .findFirst();
+      if(selectSubject.isPresent()){
+          Subject subject = selectSubject.get();
+          return subject;
+      }
+      else return new Subject("SU0","NoSubject","MANDATORY");
     }
-
     //초기값 생성에서 과목 이름으로 과목타입을 구하는 함수
     public static String getSubjectTypeByName(String subjectName) {
         Optional<Subject> selectSubject = subjectStore.stream()
-                .filter((Subject subejct) -> subejct.getSubjectName().equals(subjectName))
-                .findFirst();
-        if (selectSubject.isPresent()) return selectSubject.get().getSubjectType();
+            .filter((Subject subejct)->subejct.getSubjectName().equals(subjectName))
+            .findFirst();
+        if(selectSubject.isPresent()) return selectSubject.get().getSubjectType();
         else return "NoSubject";
     }
+
+
+    //특정 상태 수강생들의 필수 과목 평균 등급 조회
+    public static void inquireAverageGradeByStatus(){
+        System.out.println("찾으실 수강생들의 상태를 입력하세요");
+        String inputStatus = sc.next();
+        Status status = Status.Green;
+
+        switch (inputStatus){
+            case "Green":
+                status = Status.Green;
+                break;
+            case "Yellow" :
+                status = Status.Yellow;
+                break;
+            case "Red" :
+                status = Status.Red;
+                break;
+            default:
+                System.out.println("해당하는 상태값은 없습니다.");
+                return;
+        }
+
+        //클래스화 시킬때 Stream 화 시키기
+        boolean found = false;
+        for(Student student : studentStore){ //학생들 다 뒤져야하니 전부 찾기
+            if(student.getStatus() == status){ //등록받은 상태값이 같다면
+                int tempScore = 0;
+                int totalScoreNums = 0;
+                for(Score score : scoreStore){ //점수 저장공간도 탐색해준다.
+                    if(!score.getStudentId().equals(student.getStudentId())) continue; //만약 학생 ID 가 일치하지 않으면 탐색할필요없으니 넘어가주고..
+                    for(Subject subject : subjectStore){ // 일치한다면 이제 과제 저장 목록들하고 비교하면서 필수과목인지, 등록된 과목하고 같은지 비교해준다.
+                        if(subject.getSubjectType().equals(SUBJECT_TYPE_MANDATORY) &&
+                                subject.getSubjectId().equals(score.getSubjectId())){
+                            if(score.getScoreList().isEmpty()) break; //처음 만들었을 때 생성되는 회차, 점수 없는 학생 예외처리
+
+                            for(ScoreDatail scoreDatail : score.getScoreList()){ //회차 있으니 탐색해준다.
+                                found = true;
+                                tempScore += scoreDatail.getScore();
+                                totalScoreNums++;
+                            }
+                        }
+                    }
+                }
+                if(found && totalScoreNums != 0) { //회차 돌았는데 0점 맞은 학생도 있을수있으니 나누기 연산 터지는거 대비해서 미리 0 체크
+                    tempScore /= totalScoreNums;
+                    System.out.println(student.getStudentName() + " 의 필수과목 평균 등급은 " + ScoreDatail.changeGrade("MANDATORY", tempScore)  + " 입니다.");
+                }
+            }
+        }
+        if(!found) System.out.println("해당 상태의 학생이 존재하지 않습니다.");
+    }
+
+
+    //수강생 지우기
+    public static void removeStudent(){
+        System.out.println("삭제할 수강생의 고유 번호를 입력하세요");
+        String studentId = sc.next();
+
+        //지운게 성공한적 체크를 위해 boolean 형 지역변수 선언
+        boolean successRemove = false;
+        for(Student student : studentStore){
+            if(student.getStudentId().equals(studentId)){
+                studentStore.remove(student);
+                //지우기 성공, 어차피 학생 ID 는 유일하니 바로 Break;
+                successRemove = true;
+                break;
+            }
+        }
+
+        //점수 저장 공간에서도 삭제
+        //그냥 Index 0 으로 하고 지워주면 삭제하면서 ArrayList 배열 땡겨져서 안됨, 뒤에서부터 지워야 배열 안변함
+        for(int i = scoreStore.size() - 1; i >= 0; i--){
+            if(scoreStore.get(i).getStudentId().equals(studentId)){
+                scoreStore.remove(i);
+            }
+        }
+
+        if(successRemove) System.out.println("성공적으로 삭제 되었습니다.");
+        else System.out.println("그런 수강생 없습니다");
+    }
+
 }
